Bug 1462465 - Cache AccessibleNode in Node. r=surkov,smaug

Cache AccessibleNode and make it able to operate the same instance by nsINode::GetAccessibleNode